--- a/index.html
+++ b/index.html
@@ -3,45 +3,78 @@
 
 <head>
 
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>HelperBot</title>
+  <!-- Tittle -->
+  <title>HelperBot</title>
 
-    <!-- Bootstrap CSS/Bootswatch Theme-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css">
+  <!-- Bootstrap CSS/Bootswatch Theme-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css">
 
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="External-Code/index.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="External-Code/index.css">
 
 </head>
 
 <body>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 
-    <!-- JavaScript -->
-    <script src="External-Code/index.js"></script>
-<form id="myForm" action="/thanks.html">
-  Github: <input type="text" name="fname" value="Your Github"><br>
-</form> 
+    <a class="navbar-brand" href="#"><img class="navbar-brand-icon" src="Images/Helper-Bot-Icon.svg"></a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+      aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+
+      <span class="navbar-toggler-icon"></span>
+
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor02">
+
+      <ul class="navbar-nav mr-auto">
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About</a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Info </a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Commands</a>
+        </li>
+
+      </ul>
 
 
-<button onclick="myFunction()">Try it</button>
+    </div>
 
-<p id="demo"></p>
+  </nav>
 
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
- 
+  <!-- JavaScript -->
+  <script src="External-Code/index.js"></script>
+
 </body>
-</html>
 
+</html>
 
 </body>
 
