Made changes to the Navbar's CSS.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 
   </nav>
 
+  <div id="introduction-section">
+
+    <h1>Helper Bot</h1>
+
+    <p>A (*fake) Discord bot designed for helping with your coding needs.</p>
+
+  </div>
+
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
