Added the introduction section for desktop.

--- a/index.html
+++ b/index.html
@@ -32,45 +32,55 @@
 
 <body>
 
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-
-    <a class="navbar-brand" href="#"><img class="navbar-brand-icon" src="Images/Helper-Bot-Icon.svg"></a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
-      aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-
-      <span class="navbar-toggler-icon"></span>
-
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarColor02">
-
-      <ul class="navbar-nav mr-auto">
-
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About</a>
-        </li>
-
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Info </a>
-        </li>
-
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Commands</a>
-        </li>
-
-      </ul>
-
-
-    </div>
-
-  </nav>
-
   <div id="introduction-section">
 
-    <h1>Helper Bot</h1>
+    <!-- Navigation Bar -->
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 
-    <p>A (*fake) Discord bot designed for helping with your coding needs.</p>
+      <a class="navbar-brand" href="#"><img class="navbar-brand-icon" src="Images/Helper-Bot-Icon.svg"
+          alt="Helper-Bot-Icon"></a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+        aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+
+        <span class="navbar-toggler-icon"></span>
+
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor02">
+
+        <ul class="navbar-nav mr-auto">
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">About</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Info </a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Commands</a>
+          </li>
+
+        </ul>
+
+
+      </div>
+
+    </nav>
+
+    <!-- Introduction Context -->
+    <div class="introduction-section-context">
+
+      <h1 class="helper-bot-heading">Helper Bot</h1>
+
+      <p class="helper-bot-quick-description">A (*fake) Discord bot designed for helping with your coding needs.</p>
+
+      <img class="introduction-section-image" src="Images/Introduction-Section-Image.svg"
+        alt="Introduction-Section-Image">
+
+    </div>
 
   </div>
 
