--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <!-- Viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  
   <!-- Tittle -->
   <title>HelperBot</title>
 
@@ -83,6 +85,44 @@
     </div>
 
   </div>
+  
+  <!--  Info Section -->
+  <div class="info-section" id="info">
+<img src="Images/Helper-Bot-Icon.svg" class="info-helper-bot" alt="Helper-Bot-Icon">
+<div class="info-section-nav">
+  <h2 style="display: inline-block; margin-right: 2rem;">Info</h2>
+  <h2 style="display: inline-block; margin-left: 2rem; margin-right: 2rem;">Commands</h2>
+</div>
+<div class="">
+  <h1 class="info-section-heading text-center">Info</h1>
+</div>
+<div class="">
+  <div class="card-group mt-5">
+<div class="card info-section-card">
+  <img src="Images/Info-Section-Questions-Image.svg" class="info-section-images ml-5 mt-2" alt="...">
+  <div class="card-body">
+    <p class="card-text text-center">Ask questions, it's here to help!</p>
+    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+  </div>
+</div>
+<div class="card info-section-card">
+  <img src="Images/Info-Section-Collaboration.svg" class="info-section-images ml-5 mt-2 pt-2 pb-2" alt="...">
+  <div class=" card-body">
+    <p class="card-text text-center">We have a exclusive list of like minded coders <br> ready for Collaboration!</p>
+    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+  </div>
+</div>
+<div class="card info-section-card">
+  <img src="Images/Info-Section-More-Coming-Soon-Image.svg" class="info-section-images ml-5 mt-2" alt="...">
+  <div class="card-body">
+    <p class="card-text text-center">And there are more features coming soon!</p>
+    <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+  </div>
+</div>
+</div>
+</div>
+  </div>
+
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
